https://youtu.be/1SB5lMyPmuk?si=A5Oj3gXJZgCfaVan

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2892,6 +2892,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_failing_loyalty4:0 "§RThe Military is Marching on Berlin§!"
   SDF_no_going_back:0 "The Army is §RRebeling§!"
   SDF_economics_decline:0 "§RWithout action by the Fuhrerin we are slipping in a economic decline§!"
+  SDF_fallshimjager_tooltip:0 "Deploys §C3§! Fallschirmjager and §C1§! Fallschirm-Panzer"
+  SDF_pravda_war_timer_tooltip:0 "§RThe People Demand a end to Communism§!"
 
   
   ##TRAITS##
@@ -2940,6 +2942,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_economic_downturn4:0 "Collapsed Economy"
   sdf_economic_downturn5:0 "Recovering Economy: §OOn the Up§!"
   sdf_economic_downturn6:0 "Recovering Economy: §CReturning to Normal§!"
+  sdf_ooarai_resistance:0 "Ooarai Resistance"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -2978,6 +2981,10 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   ##ECONOMY##
   SDF_economic_crisis:0 "Economic Downturn"
   SDF_economic_crisis_repeating:0 "Economic Crisis"
+  SDF_war_with_pravda:0 "War with Pravda"
+  SDF_pravda_war_timer:0 "The Clock is Ticking"
+  SDF_officer_revolt:0 "Officer Revolt"
+  SDF_officer_repeating:0 "Officer Activity"
   
   ##FOCUS##
   SDF_wacht_am_rhien:0 "Die Wacht Am Rhein"
@@ -3039,10 +3046,11 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_sort_of_stability:0 "Some Sort of Stability"
   SDF_sort_of_stability_desc:0 ""
   
+  ##OOARAI
   SDF_ooarai_issue:0 "Ooarai Debate"
   SDF_ooarai_issue_desc:0 ""
   SDF_steal_gold:0 "'Repurposing' Ooarai Gold"
-  SDF_steal_gold_desc:0 ""
+  SDF_steal_gold_desc:0 "Just because Ooarai doesn’t have much in terms of financial resources doesn’t mean its treasury is of no use. It could provide a boost to our industry, a great source of income for foreign goods, or a great jolt of stimulus for our economy."
   SDF_disarm_ooarai:0 "Disarm the Resistance"
   SDF_disarm_ooarai_desc:0 ""
   SDF_trail_of_4:0 "Trial of Four"
@@ -3056,13 +3064,15 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_ooarai_core:0 "Reichskommissariat Ooarai"
   SDF_ooarai_core_desc:0 ""
   
+  ##MILIARY FIX
   SDF_reign_military:0 "Reign in the SDK"
-  SDF_reign_military_desc:0 ""
+  SDF_reign_military_desc:0 "The completion of the civil war has caused a great deal of uncertainty in the nation whilst our victory was indeed glorious and hard fought, there still remains many disagreements on the future of the state, one one side the hardliners still influenced largely by Nishizumist teachings and the Reformers influenced partially by Saori herself but her new appointee to the Fallschirmjager Commission."
   SDF_power_struggle:0 "The Great Game"
   SDF_power_struggle_desc:0 ""
   SDF_keep_nishizumists:0 "The Old Guard's Grasp"
-  SDF_keep_nishizumists_desc:0 ""
+  SDF_keep_nishizumists_desc:0 "These upstarts have no idea how to best serve the fatherland, whilst they may be popular amongst the rank and file we know how to navigate the nation, and will use this to kick them out in particular General Heinrich"
   SDF_purge_generals:0 "A Reformed SDK"
+  SDF_purge_generals_desc:0 "The reformers are right we need to kick out these traitors from our government if we are to have any chance of surviving. \n \nForces have been moved into position to quickly remove these backwards thinking officers and replace them with far more loyal and competent individuals"
   SDF_reinstate_KS:0 "Reinstate the Kurostaffel"
   SDF_reinstate_KS_desc:0 ""
   SDF_ratne_igre:0 "Ratne Igre"
@@ -3072,6 +3082,6 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_fallshimpanzers:0 "1st Fallschirm-Panzer 'Gepanzerter Speer'"
   SDF_fallshimpanzers_desc:0 ""
   SDF_coup_government:0 "SDK Coup"
-  SDF_coup_government_desc:0 ""
+  SDF_coup_government_desc:0 "Saori has so brutally and effectively destroyed all our enemies unfortunately she has outlived her usefulness, we would say see you later but she won’t be seeing us ever again."
   SDF_heer_no_fear:0 "The Heer shall Know no Fear!"
   SDF_heer_no_fear_desc:0 ""
