--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -1483,33 +1483,6 @@
  pvd.5.t:1 "[From.GetName] resists [Root.GetAdjective] pressure"
  pvd.5.d:1 "[From.GetName] is resisting our diplomatic pressure for us to have more control of their foreign policy."
  pvd.5.a:1 "Pity."
- pvd.33.d:1 ""
- pvd.33.a:1 "Nonna Leads"
- pvd.11.d:1 "After the success of our recent cooperation, the Soviets have come to us with an intriguing offer. They propose that we put our differences aside and instead of wasting our strength fighting each other while the western democracies watch and profit, we combine our strength and crush them instead!" 
- pvd.12.d:1 "The Germans have refused our offer, if we want the industry of Kuromorimine we shall have to take them by force!"
- pvd.14.t:1 "Membership in [Root.GetNameDef]"
- pvd.14.d:1 "We are under pressure from Moscow to officially join [Root.GetNameDef]. Should we agree to this?
- pvd.15.t:1 "[From.GetName] Refuses!"
- pvd.15.d:1 "[From.GetNameDef] has outrageously refused to merge with [Root.GetNameDef]! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
- pvd.16.t:1 "The Annexation of [From.GetName]"
- pvd.16.d:1 "The Supreme Soviet has received a formal request from the [From.GetAdjective] parliament for membership in [From.GetNameDef]. They will be organized as the [From.GetAdjective] Autonomous Oblast in the Russian SFSR.
- pvd.101.t:1 "Coup in [From.GetNameDef]!"
- pvd.101.d:1 "Alina have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
- pvd.101.a:1 "Long Live [From.GetNameDef]!"
- pvd.101.b:1 "Perhaps it is for the better."
- pvd.101.c:1 "Proof of the instability of the Communist system."
- pvd.102.t:1 "Anarchist Takeover in [From.GetNameDef]"
- pvd.102.d:1 "Recently [From.GetNameDef], long dominated by the Red Army, has been taken over by a faction stylizing itself after the Black Army that once controlled a large section of Ukraine, adhering to Anarchist principles. It seems that this new government of [From.GetNameDef] is also following the ideals of Anarchism. \n\n Only time will tell what developments will arise from this revolution."
- pvd.102.a:1 "Death to all who stand in the way of freedom for the working people!"
- pvd.102.b:1 "They have come a long way."
- pvd.102.c:1 "Chaos reigns supreme."
- pvd.103.t:1 "Legislative Elections held in [From.GetNameDef]"
- pvd.103.d:1 "Alina's §RMilitary§! Government has recently announced that it is conducting legislative elections to the newly re-established All-Union Constituent Assembly. International observers have been invited to verify that the election is free and fair. \n\nA suprising number of political parties have emerged in the post civil-war landscape, and there are sure to be some interesting developments in this election."
- pvd.103.a:1 "Let the people be heard."
- pvd.103.b:1 "They have come a long way."
- pvd.103.c:1 "An unexpected development."
- pvd.221.t:1 "Nonna Asserts to Pravda"
- pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Alina has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Alina loyalists have hoisted their banners in revolt against Nonna's new regime."
  pvd.6.t:1 "Reclaim Karelia"
  pvd.6.d:1 "Kuromorimine has recently offered to help us regain the territory lost to the Russians in exchange for us joining their war. Should we accept?"
  pvd.6.a:1 "Yes. We will reclaim what is ours!"
@@ -1528,14 +1501,24 @@
  pvd.10.t:1 "The Finns refuse"
  pvd.10.d:1 "The Finns have rejected our generous peace offer. The war continues."
  pvd.10.a:1 "Their loss."
+ pvd.11.d:1 "After the success of our recent cooperation, the Soviets have come to us with an intriguing offer. They propose that we put our differences aside and instead of wasting our strength fighting each other while the western democracies watch and profit, we combine our strength and crush them instead!" 
+ pvd.12.d:1 "The Germans have refused our offer, if we want the industry of Kuromorimine we shall have to take them by force!"
+ pvd.14.t:1 "Membership in [Root.GetNameDef]"
+ pvd.14.d:1 "We are under pressure from Moscow to officially join [Root.GetNameDef]. Should we agree to this?
+ pvd.15.t:1 "[From.GetName] Refuses!"
+ pvd.15.d:1 "[From.GetNameDef] has outrageously refused to merge with [Root.GetNameDef]! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
+ pvd.16.t:1 "The Annexation of [From.GetName]"
+ pvd.16.d:1 "The Supreme Soviet has received a formal request from the [From.GetAdjective] parliament for membership in [From.GetNameDef]. They will be organized as the [From.GetAdjective] Autonomous Oblast in the Russian SFSR.
  pvd.20.t:1 ""
  pvd.20.d:1 ""
- pvd.23.t:1 ""
- pvd.23.d:1 ""
+ pvd.20.a:1 ""
  pvd.21.t:1 "Italian Civil War"
- pvd.21.d:1 "Bolstered by the capture of Italian mainland territories by the allies, Anti-Fascist resistance movements have risen up against our government. Peppeorni suggests that we side with them and join the Allies against Anchovy's wishes."
+ pvd.21.d:1 "Bolstered by the capture of Italian mainland territories by the allies, Anti-Fascist resistance movements have risen up against our government. Carpaccio suggests that we side with them and join the Allies against Anchovy's wishes."
  pvd.21.a:1 "Viva la Resistenza!"
  pvd.21.b:1 "Viva Anchovy!"
+ pvd.22.t:1 "The End of Nazism"
+ pvd.22.d:1 "Our underground networks are mobilising. We will put the Fascist menace down for once and for all! For Kuromorimine!"
+ pvd.22.a:1 "Deutschland Uber Alles!"
  pvd.28.t:1 "Nonna's Coup"
  pvd.28.d:1 "The world may never know if Alina was right to unseat Katyusha, or whether she made more enemies by ending the purges of the Red Army. What is known is that what she feared eventually came to pass. Today, Nonna and with the support of several influential party members and NKVD officers, launched a coup overthrowing Alina's rule.\n\nThe former Marshal was attacked in her home with an ice axe, and was swiftly executed along with several of her supporters. Tearing down the militaristic state she built up will take time, but the people know now at least that she was not infallible.\n\nOne of the few survivors who managed to escape was Ivan Konev. The fierce supporter of Katyusha has managed to gather some support and declared war on the Nonna government, in an attempt to take back power and 'fulfill the vision of Comrade Alina'."
  pvd.29.t:1 "Constitutional Convention - Religion in the State"
@@ -1544,10 +1527,31 @@
  pvd.30.d:1 "Socialism remains very popular among the people of Russia. Should we continue this course, or adopt a more moderate policy? The fascists have also been gaining popularity with their corporatist economic programme."
  pvd.31.t:1 "Constitutional Convention - Policy of the Nationalities"
  pvd.31.d:1 "Many nationalitites have been agitating for greater independence or autonomy. However, the status of Russians in the state has traditionally been enshrined as superior. Which policy should we choose?"
- pvd.22.t:1 "The End of Nazism"
- pvd.22.d:1 "Our underground networks are mobilising. We will put the Fascist menace down for once and for all! For Kuromorimine!"
- pvd.22.a:1 "Deutschland Uber Alles!"
+ pvd.33.d:1 ""
+ pvd.33.a:1 "Nonna Leads"
+ pvd.101.t:1 "Coup in [From.GetNameDef]!"
+ pvd.101.d:1 "Alina have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
+ pvd.101.a:1 "Long Live [From.GetNameDef]!"
+ pvd.101.b:1 "Perhaps it is for the better."
+ pvd.101.c:1 "Proof of the instability of the Communist system."
+ pvd.102.t:1 "Anarchist Takeover in [From.GetNameDef]"
+ pvd.102.d:1 "Recently [From.GetNameDef], long dominated by the Red Army, has been taken over by a faction stylizing itself after the Black Army that once controlled a large section of Ukraine, adhering to Anarchist principles. It seems that this new government of [From.GetNameDef] is also following the ideals of Anarchism. \n\n Only time will tell what developments will arise from this revolution."
+ pvd.102.a:1 "Death to all who stand in the way of freedom for the working people!"
+ pvd.102.b:1 "They have come a long way."
+ pvd.102.c:1 "Chaos reigns supreme."
+ pvd.103.t:1 "Legislative Elections held in [From.GetNameDef]"
+ pvd.103.d:1 "Alina's §RMilitary§! Government has recently announced that it is conducting legislative elections to the newly re-established All-Union Constituent Assembly. International observers have been invited to verify that the election is free and fair. \n\nA suprising number of political parties have emerged in the post civil-war landscape, and there are sure to be some interesting developments in this election."
+ pvd.103.a:1 "Let the people be heard."
+ pvd.103.b:1 "They have come a long way."
+ pvd.103.c:1 "An unexpected development."
+ pvd.105.t:1 ""
+ pvd.105.d:1 ""
+ pvd.105.a:1 ""
+ pvd.105.b:1 ""
+ pvd.105.c:1 ""
  pvd.106.d:1 "Communists in Kuromorimine, empowered by the recent loosening of restrictions on their organising as part of a treaty with the Pravda, have seized control of key positions in Berlin and killed Maho. \n\n Erika has taken charge of the Nazi Party and secured most of the country, promising to bring ruin to all 'Traitorious Judeo-Bolsheviks who murdered the Great Fuhrer'."
+ pvd.221.t:1 "Nonna Asserts to Pravda"
+ pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Alina has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Alina loyalists have hoisted their banners in revolt against Nonna's new regime."
  
  ## SCHIZO ##
  
