--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -681,7 +681,7 @@
  socialist_science_focus:0 "Socialist Science"
  peoples_commissariat_focus:0 "People's Commissariat of Defense Industry"
  home_of_revolution:0 "Home of the Revolution"
- home_of_revolution_desc:0 "Comrades, with the defeat of the vile Trotskyite counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
+ home_of_revolution_desc:0 "Comrades, with the defeat of the vile Nonnas counter revolutionaries we were able to focus on defending the revolution. Our goal, our hope, our slogan is Socialism in One Country. We will build a bountiful socialist utopia here in the Soviet Union and the rest of the world will inevitably embrace it."
  en_svensk_tiger:0 "En Svensk Tiger"
  en_svensk_tiger_desc:0 "If Sweden is to be like a tiger on the prowl then those who spy on us must not know what we do. In these time of conflict and strife it is the patriotic duty of every Swede to keep silent."
  state_shintoism:0 "State Shintoism"
@@ -690,7 +690,7 @@
  vittoria_mutilata_desc:0 "§LOur allies betrayed Italy and stabbed us in the back when they broke the Pact of London. We sacrificed so much blood at the Isonzo for their victory and they in turn denied us what was ours by right. Now Italy will take her destiny into her own hands and ensure that justice is done.§!"
  stiff_upper_lip:0 "British Stoicism"
  stiff_upper_lip_desc:0 "If you can keep your head when all about you\nAre losing theirs and blaming it on you,\nIf you can meet with Triumph and Disaster\nAnd treat those two impostors just the same\nYours is the Earth and everything that's in it,\nAnd - which is more - you'll be a Man, my son. "
- trotskyite_plot:0 "Trotskyite Plot?"
+ trotskyite_plot:0 "Nonna's Plot?"
  trotskyite_plot_desc:0 "Paranoia and pathological distrust stemming from old power struggles impact the leadership of this nation."
  trotskyite_plot_purged:0 "Nonna Plot Purged?"
  trotskyite_plot_purged_desc:0 "Despite the purges, the fear of betrayal remains."
