--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -84,7 +84,7 @@
  SOV_yevgeny_preobrazhensky:0 "Yevgeni Preobrazhensky"
  SOV_aleksandr_shlyapnikov:0 "Aleksandr Shlyapnikov"
  SOV_lev_trotsky:0 "Nonna"
- SOV_nikolay_bukharin:0 "Nikolay Bukharin"
+ SOV_nikolay_bukharin:0 "Alina"
  SOV_aleksey_rykov:0 "Aleksey Rykov"
  SOV_mikhail_tomsky:0 "Mikhail Tomsky"
  SOV_grigory_zinovyev:0 "Grigory Zinovyev"
@@ -110,7 +110,7 @@
  SOV_vladimir_kosmin:0 "Vladimir Kosmin"
  SOV_aleksandr_rodzyanko:0 "Aleksandr Rodzyanko"
  SOV_andrey_shkuro:0 "Andrey Shkuro"
- SOV_tsar_vladimir_kirillovich:0 "Vladimir III"
+ SOV_tsar_vladimir_kirillovich:0 "Klara"
  SOV_tsar_vsevolod_ivanovich:0 "Tsar Vsevolod I"
  SOV_metropolitan_meletius:0 "Metropolitan Meletius"
  SOV_patriarch_meletius:0 "Patriarch Meletius"
