will come back at mid january

--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -4,7 +4,7 @@
  SOV_konstantin_rodzayevsky:0 "Konstantin Rodzayevsky"
  SOV_aleksandr_kerensky:0 "Aleksandr Kerensky"
  SOV_supreme_soviet:0 "The Supreme Soviet"
- SOV_provisional_government:0 "The Provisional Government"
+ SOV_provisional_government:0 "Nina"
 
  SOV_georgy_zhukov:0 "Georgy Zhukov"
  SOV_konstantin_rokossovsky:0 "Konstantin Rokossovsky"
