--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -1509,9 +1509,9 @@
  pvd.15.d:1 "[From.GetNameDef] has outrageously refused to merge with [Root.GetNameDef]! What such a pitiful nation could possibly hope to accomplish on its own is a mystery that may never be answered."
  pvd.16.t:1 "The Annexation of [From.GetName]"
  pvd.16.d:1 "The Supreme Soviet has received a formal request from the [From.GetAdjective] parliament for membership in [From.GetNameDef]. They will be organized as the [From.GetAdjective] Autonomous Oblast in the Russian SFSR.
- pvd.20.t:1 ""
- pvd.20.d:1 ""
- pvd.20.a:1 ""
+ pvd.20.t:1 "The Great Purge of Pravda"
+ pvd.20.d:1 "Katyusha, the indomitable commander of Pravda, has decided to take drastic measures to secure her position and eliminate potential rivals within the party. Fueled by a desire for absolute control, Katyusha has initiated the Great Purge, a ruthless campaign against those she perceives as threats to her leadership. The school is now plunged into a maelstrom of political intrigue, as Katyusha seeks to crush all opposition and solidify her authority. The fate of Pravda hangs in the balance."
+ pvd.20.a:1 "Just as we thought, there are enemies all around us."
  pvd.21.t:1 "Italian Civil War"
  pvd.21.d:1 "Bolstered by the capture of Italian mainland territories by the allies, Anti-Fascist resistance movements have risen up against our government. Carpaccio suggests that we side with them and join the Allies against Anchovy's wishes."
  pvd.21.a:1 "Viva la Resistenza!"
@@ -1527,7 +1527,7 @@
  pvd.30.d:1 "Socialism remains very popular among the people of Russia. Should we continue this course, or adopt a more moderate policy? The fascists have also been gaining popularity with their corporatist economic programme."
  pvd.31.t:1 "Constitutional Convention - Policy of the Nationalities"
  pvd.31.d:1 "Many nationalitites have been agitating for greater independence or autonomy. However, the status of Russians in the state has traditionally been enshrined as superior. Which policy should we choose?"
- pvd.33.d:1 ""
+ pvd.33.d:1 "In a surprising turn of events, Nonna, the steadfast and composed commander of Pravda, has successfully executed a coup against Katyusha, seizing control of the school and the leadership of the team. The atmosphere at Pravda is charged with tension and uncertainty as Nonna assumes the reins of power."
  pvd.33.a:1 "Nonna Leads"
  pvd.101.t:1 "Coup in [From.GetNameDef]!"
  pvd.101.d:1 "Alina have launched a coup d'etat against Katyusha's leadership, quickly seizing control of Moscow and Leningrad. They pledged to end the tyranny and purges of Katyusha's reign in a public address this morning. \n\nKatyusha escaped from the Kremlin in the midst of the coup, and her loyalists have gathered around the city of Katyushagrad, preparing to take back power from the ursurpers."
@@ -1544,11 +1544,11 @@
  pvd.103.a:1 "Let the people be heard."
  pvd.103.b:1 "They have come a long way."
  pvd.103.c:1 "An unexpected development."
- pvd.105.t:1 ""
- pvd.105.d:1 ""
- pvd.105.a:1 ""
- pvd.105.b:1 ""
- pvd.105.c:1 ""
+ pvd.105.t:1 "Turmoil in the Boot"
+ pvd.105.d:1 "In the wake of the Allied invasion of Southern Italy, the region finds itself plunged into chaos, and the once-united forces of Anzio are torn by internal strife. A civil war has erupted as differing factions within the Italian ranks grapple for control amidst the foreign occupation. The outcomes of this conflict will undoubtedly shape the fate of Anzio and its contributions to the wider war effort."
+ pvd.105.a:1 "We can't change our path anymore."
+ pvd.105.b:1 "The military betrayed us! We can't let it happen to us."
+ pvd.105.c:1 "Let's wish that Europe gets peaceful again soon..."
  pvd.106.d:1 "Communists in Kuromorimine, empowered by the recent loosening of restrictions on their organising as part of a treaty with the Pravda, have seized control of key positions in Berlin and killed Maho. \n\n Erika has taken charge of the Nazi Party and secured most of the country, promising to bring ruin to all 'Traitorious Judeo-Bolsheviks who murdered the Great Fuhrer'."
  pvd.221.t:1 "Nonna Asserts to Pravda"
  pvd.221.d:1 "[SOV.GetNameDefCap] has seen a great upset, as Alina has been deposed by a faction supporting her new political rival [SOV.GetLeader]!\nAs for where the old Marshal is now, or exactly how the transition took place, details are still scarce.\nEverything indicates that it was not a peaceful transition however, as some Alina loyalists have hoisted their banners in revolt against Nonna's new regime."
