https://youtu.be/9pGgq6n1hoQ?si=0qLO040J8JlU_5lR

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2905,6 +2905,7 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_economics_decline:0 "§RWithout action by the Fuhrerin we are slipping in a economic decline§!"
   SDF_fallshimjager_tooltip:0 "Deploys §C3§! Fallschirmjager and §C1§! Fallschirm-Panzer"
   SDF_pravda_war_timer_tooltip:0 "§RThe People Demand a end to Communism§!"
+  SDF_into_future_tooltip:0 "§CWhen you finish the focus it will add a custom Economy law§!"
 
   
   ##TRAITS##
@@ -2954,6 +2955,15 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   sdf_economic_downturn5:0 "Recovering Economy: §OOn the Up§!"
   sdf_economic_downturn6:0 "Recovering Economy: §CReturning to Normal§!"
   sdf_ooarai_resistance:0 "Ooarai Resistance"
+  sdf_industrial_democracy:0 "Industrial Democracy"
+  sdf_industrial_democracy2:0 "Industrial Democracy"
+  sdf_closed_economy:0 "Autarky"
+  sdf_autarky:0 "Self-Imposed International Isolation"
+  sdf_autarky2:0 "Self-Imposed International Isolation"
+  sdf_free_trade_economy:0 "Free Trade"
+  sdf_no_tarrifs:0 "Zero Tarrifs"
+  sdf_industrial_democracy_law:0 "Weaponized Industrial Democracy"
+  sdf_free_trade_law:0 "Free Economy"
   
   ##DECISIONS##
   SDF_raise_units:0 "Raising the National Guard"
@@ -3087,20 +3097,56 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_reign_military:0 "Reign in the SDK"
   SDF_reign_military_desc:0 "The completion of the civil war has caused a great deal of uncertainty in the nation whilst our victory was indeed glorious and hard fought, there still remains many disagreements on the future of the state, one one side the hardliners still influenced largely by Nishizumist teachings and the Reformers influenced partially by Saori herself but her new appointee to the Fallschirmjager Commission."
   SDF_power_struggle:0 "The Great Game"
-  SDF_power_struggle_desc:0 ""
+  SDF_power_struggle_desc:0 "The Rift between the Moderates, Saorists and Nishizumism Elements has grown, the situation is threatening to throw Kuromormine into a second civil war if drastic action is not immediately undertaken."
   SDF_keep_nishizumists:0 "The Old Guard's Grasp"
   SDF_keep_nishizumists_desc:0 "These upstarts have no idea how to best serve the fatherland, whilst they may be popular amongst the rank and file we know how to navigate the nation, and will use this to kick them out in particular General Heinrich"
   SDF_purge_generals:0 "A Reformed SDK"
   SDF_purge_generals_desc:0 "The reformers are right we need to kick out these traitors from our government if we are to have any chance of surviving. \n \nForces have been moved into position to quickly remove these backwards thinking officers and replace them with far more loyal and competent individuals"
   SDF_reinstate_KS:0 "Reinstate the Kurostaffel"
-  SDF_reinstate_KS_desc:0 ""
+  SDF_reinstate_KS_desc:0 "The KS first Envisioned by the Nishazumi regime to bring order to the otherwise disorganized masses of the nation, and to act as the military arm of the party, whilst its past is bloody the old guard is adamant on its reimplementation and after some discussion it was deemed paramount to national security"
   SDF_ratne_igre:0 "Ratne Igre"
-  SDF_ratne_igre_desc:0 ""
+  SDF_ratne_igre_desc:0 "There are many things we must learn from the 62nd Sensha-dou Tournament, one being that the St Gloriana Commonwealth was horribly underestimated during the initial stages of war. BC freedom and Pravda were expected to fall quickly but because of our own overconfidence we have lost all we gained, now we must right these wrongs, through pre war preparations for the worst."
   SDF_elevate_fallshimjager:0 "Elevate the Fallschirmjäger"
-  SDF_elevate_fallshimjager_desc:0 ""
+  SDF_elevate_fallshimjager_desc:0 "The newest development of blitzkrieg is not better weaponry, armor, or air. A new version of combined arms shall implement the quick and rapid use of paratroops behind a rapidly moving line. For this, we must make the Fallschirmjager the central component of our forces"
   SDF_fallshimpanzers:0 "1st Fallschirm-Panzer 'Gepanzerter Speer'"
-  SDF_fallshimpanzers_desc:0 ""
+  SDF_fallshimpanzers_desc:0 "For the ultimate blitzkrieg development, high command has demanded even greater advancements - paratrooper units in conjunction with armor."
   SDF_coup_government:0 "SDK Coup"
   SDF_coup_government_desc:0 "Saori has so brutally and effectively destroyed all our enemies unfortunately she has outlived her usefulness, we would say see you later but she won’t be seeing us ever again."
   SDF_heer_no_fear:0 "The Heer shall Know no Fear!"
-  SDF_heer_no_fear_desc:0 ""
+  SDF_heer_no_fear_desc:0 "At last the great struggle has ended, and with it peace or something like it has finally fallen upon Kuromormine, but not for long storm clouds are growing all across Europe, the rising power of Pravda, and the decrepit old powers of BC Freedom and St Gloriana are attempting to hold onto their old status’s as global powers we must prepare to potentially battle against the globe to bring about the new Kuromormine reich, whilst our main enemy is Pravda we must remain vigilant against western interference into our plans in the east"
+
+  ##ECONOMIC
+  SDF_status_economic:0 "Status of the Economy"
+  SDF_status_economic_desc:0 ""
+  SDF_industrial_democracy:0 "Industrial Democracy"
+  SDF_industrial_democracy_desc:0 ""
+  SDF_break_corperations:0 "Break up Corporations"
+  SDF_break_corperations_desc:0 ""
+  SDF_unite_mic:0 "Unite the Military Industrial Complex"
+  SDF_unite_mic_desc:0 ""
+  SDF_work_freedom:0 "Work for Freedom"
+  SDF_work_freedom_desc:0 ""
+  SDF_land_distribution:0 "Land Distribution"
+  SDF_land_distribution_desc:0 ""
+  SDF_autarky:0 "Autarky"
+  SDF_autarky_desc:0 ""
+  SDF_closing_trade:0 "Closing off all Communication"
+  SDF_closing_trade_desc:0 ""
+  SDF_battle_grain:0 "Battle for Grain"
+  SDF_battle_grain_desc:0 ""
+  SDF_new_mines:0 "Resource Allocation"
+  SDF_new_mines_desc:0 ""
+  SDF_kuro_century:0 "Kuromorimine "§YGolden§!" Age"
+  SDF_kuro_century_desc:0 ""
+  SDF_free_market:0 "The Free Market"
+  SDF_free_market_desc:0 ""
+  SDF_civil_works:0 "Civil Work Programs"
+  SDF_civil_works_desc:0 ""
+  SDF_autobauhn:0 "Expand the Autobahn"
+  SDF_autobauhn_desc:0 ""
+  SDF_fix_buracracy:0 "Reorganize the Bureaucracy"
+  SDF_fix_buracracy_desc:0 ""
+  SDF_zero_tarrifs:0 "Open to the West"
+  SDF_zero_tarrifs_desc:0 ""
+  SDF_into_future:0 "Into the Future"
+  SDF_into_future_desc:0 ""
