--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2851,8 +2851,8 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  GER_military_civil_war_tt:1 "The anti-communist military will become §Rrebellious!§!"
  GER_military_unrest:1 "Military Uprising"
  GER_socialist_civil_war_tt:1 "The military uprising has been defeated"
- GER_german_socialism:1 "German Socialism"
- GER_german_socialism_desc:1 "German Socialism must meet the unique conditions of the country. Should we exalt the German nation, or instead honour the ideals of Marxist internationalism?"
+ GER_german_socialism:1 "Kuromorimine Socialism"
+ GER_german_socialism_desc:1 "Kuromorimine Socialism must meet the unique conditions of the country. Should we exalt the German nation, or instead honour the ideals of Katyushist internationalism?"
  GER_legacy_of_marx:1 "Legacy of Marx"
 
  RULE_COMMUNIST_GER_AI_DESC:1 "Germany will reconcile with the Soviet Union and communists will stage a coup."
