--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -2877,6 +2877,10 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_UNI_DEF:0 "Kuromorimine"
   SDF_UNI_ADJ:0 "Kuromorimine"
   
+  SDF_COUP_TAG:0 "Kuromorimine Reich"
+  SDF_COUP_TAG_DEF:0 "Kuromorimine"
+  SDF_COUP_TAG_ADJ:0 "Kuromorimine"
+  
   SDF_fascism_party:0 "FRC"
   SDF_fascism_party_long:0 "Far Right Wing Coalition"
   SDF_democratic_party:0 "CLC"
@@ -3123,15 +3127,15 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_status_economic:0 "Status of the Economy"
   SDF_status_economic_desc:0 ""
   SDF_industrial_democracy:0 "Industrial Democracy"
-  SDF_industrial_democracy_desc:0 ""
+  SDF_industrial_democracy_desc:0 "The thing that bonds us is not life, entertainment, nor friendship. It is work - the physical form of our efforts. Those that produce the most for our nation shall therefore be given the most representation in our political decisions."
   SDF_break_corperations:0 "Break up Corporations"
-  SDF_break_corperations_desc:0 ""
+  SDF_break_corperations_desc:0 "The subservience that foreign corporations demand of our workers prevents them from being loyal to the nation. With only state-owned business shall our workers know the true meaning of liberty."
   SDF_unite_mic:0 "Unite the Military Industrial Complex"
   SDF_unite_mic_desc:0 ""
   SDF_work_freedom:0 "Work for Freedom"
-  SDF_work_freedom_desc:0 ""
+  SDF_work_freedom_desc:0 "The overhaul of the nation’s system of political representation implies that its judicial system must be likewise changed. Prisoners, political opponents, and war criminals will be extended the offer of a lifetime: to work in exchange for their freedom. "
   SDF_land_distribution:0 "Land Distribution"
-  SDF_land_distribution_desc:0 ""
+  SDF_land_distribution_desc:0 "There exists large swaths of productive land across our nation. Its acquisition and subsequent development can increase our industrial capacity."
   SDF_autarky:0 "Autarky"
   SDF_autarky_desc:0 ""
   SDF_closing_trade:0 "Closing off all Communication"
@@ -3147,11 +3151,11 @@ KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
   SDF_civil_works:0 "Civil Work Programs"
   SDF_civil_works_desc:0 ""
   SDF_autobauhn:0 "Expand the Autobahn"
-  SDF_autobauhn_desc:0 ""
+  SDF_autobauhn_desc:0 "A growing economy requires the infrastructure to support it. The cleanest solution is to expand our greatest and most modern triumph: the autobahn."
   SDF_fix_buracracy:0 "Reorganize the Bureaucracy"
   SDF_fix_buracracy_desc:0 ""
   SDF_zero_tarrifs:0 "Open to the West"
-  SDF_zero_tarrifs_desc:0 ""
+  SDF_zero_tarrifs_desc:0 "Jack of all trades, master of none. A closed nation will suffer a fate that cannot be undone.  \n \nA self-sustaining free market must interact with stronger economies. Opening the nation to the cultures and goods abroad will strengthen our own production."
   SDF_into_future:0 "Into the Future"
   SDF_into_future_desc:0 ""
   
